# kiezbox-messages

./: .env  .gitignore  .gitlab-ci.yml  LICENSE  README.md  cookiecutter-config-file.yml  main.py  pyproject.toml  requirements.in  tailwind.config.js
backend/: backend.db  main.py  package-lock.json  package.json  requirements.in  requirements.txt  styles.css
backend/app/api/: api.py
backend/app/api/endpoints/: hello.py  messages.py
backend/app/core/: config.py
backend/app/crud/: crud_message.py
backend/app/db/: session.py
backend/app/models/: message.py
backend/app/schemas/: message.py
backend/core/: config.py
backend/static/css/: app.css
backend/templates/: base.html  emergency.html  inbox.html  inbox_content.html  index.html
frontend/: .env
template/: README.md  docker-compose.yml
templates/: base.html  emergency.html  inbox.html  index.html
